Preparing release 26.0